@@ -5,7 +5,6 @@ import ee.taltech.iti03022024backend.dto.book.BookDtoIn;
 import ee.taltech.iti03022024backend.dto.book.BookDtoOut;
 import ee.taltech.iti03022024backend.entities.book.BookEntity;
 import ee.taltech.iti03022024backend.exceptions.NotFoundException;
-import ee.taltech.iti03022024backend.exceptions.UnfilledFieldException;
 import ee.taltech.iti03022024backend.mappers.book.BookMapper;
 import ee.taltech.iti03022024backend.repositories.books.BookRepository;
 import lombok.RequiredArgsConstructor;
@@ -13,7 +12,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -45,7 +43,14 @@ public class BookService {
 
     public List<BookDtoOut> getBooks() {
         List<BookEntity> bookEntities = bookRepository.findAll();
-        return bookMapper.toDtoList(bookEntities);
+        return bookEntities.stream()
+                .map(bookEntity -> {
+                    BookDtoOut bookDtoOut = bookMapper.toDto(bookEntity);
+                    String bookGenre = genreController.getGenreById(bookEntity.getGenreId()).getBody();
+                    bookDtoOut.setGenre(bookGenre);
+                    return bookDtoOut;
+                })
+                .toList();
     }
 
     public List<BookDtoOut> getBooksByGenre(Long genreId) {
@@ -61,11 +66,6 @@ public class BookService {
                     bookDtoOut.setGenre(bookGenre);
                     return bookDtoOut;
                 })
-                .collect(Collectors.toList());
-    }
-
-    public void deleteBook(long id) throws NotFoundException {
-        BookEntity bookEntity = bookRepository.findById(id).orElseThrow(() -> new NotFoundException("Cannot delete a book that does not exist"));
-        bookRepository.delete(bookEntity);
+                .toList();
     }
 }
